--- a/style.css
+++ b/style.css
@@ -21,3 +21,37 @@ body {
     font-size: 28px;
     color: black;
 }
+
+.inputBox input {
+    position: relative;
+    width: 100%;
+    height: 60px;
+    border: none;
+    margin: 15px 0 20px;
+    background: transparent;
+    outline: none;
+    padding: 0 20px;
+    font-size: 24px;
+    letter-spacing: border-box;
+    border-radius: 8px;
+    color: black;
+}
+
+.inputBox input:placeholder {
+    letter-spacing: 0px;
+}
+
+.inputBox #btn {
+    position: relative;
+    cursor: pointer;
+    color: white;
+    background-color: black;
+    font-size: 24px;
+    display: inline-block;
+    padding: 10px 15px;
+    border-radius: 8px;
+}
+
+.inputBox #btn:active {
+    background-color: purple;
+}
